<resources>
    <string name="app_name">House Party</string>
    <string name="action_settings">Settings</string>
    <string name="Title">House Party!</string>
    <string name="Welcome">Welcome to</string>
    <string name="Tip">Zip Code</string>
    <string name="pin_text">Your Location</string>
    <string name="or">or</string>
    <string name="pin">Pin</string>
    <string name="find">find</string>
    <string name="party1">D</string>
    <string name="party2">R</string>
    <string name="title_activity_congressional">Congressional</string>
    <string name="title_activity_detailed">Detailed</string>
    <string name="senator2">Diane Feinstein \nDemocrat
    dsofein@capitolhill.gov \nshesfeinallyhere.com
    Latest Tweet: So happy right now. Love wins</string>
    <string name="senator1">Barbara Boxer\nDemocrat
    fisticuffs@capitolhill.gov \n featherweightchamp.com
    Latest Tweet: Nebody wanna spar?</string>
    <string name="hor1">Devin Nunes \nRepublican
    nuneoclock@capitolhill.gov \nwannagrabbrunch.com
    Latest Tweet: Just woke up. Brunch @bboxer</string>
    <string name="hor2">Barbara Lee \nDemocrat
    blee@capitolhill.gov \nbeleeveit.com
    Latest Tweet: Man I love the bay.</string>
    <string name="detailed">Republican
    Out of Office: 1/2/17 \n Committees: Ag, Energy
    Bills: Journal, HR 4557</string>
</resources>
