<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ecalo.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#232066"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Welcome"
        android:textSize = "32sp"
        android:textAlignment="textStart"
        android:id="@+id/textView1"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:textSize = "32sp"
        android:textAlignment="textStart"
        android:id="@+id/textView2"
        android:textColor="#ffffff" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:weightSum="1">

        <EditText
            android:layout_width="156dp"
            android:layout_height="0dp"
            android:inputType="number"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/zip_code"
            android:text="@string/Tip"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:clickable="true"
            android:editable="true"
            android:layout_gravity="center_horizontal"
            android:background="#D3D3D3"
            android:layout_weight="0.60" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find"
            android:id="@+id/find_button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.17" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_text"
            android:id="@+id/pin_button"
            android:background="@color/party_color1"
            android:src="@drawable/pin"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>
